tests/ui/submit-unrecognized.stderr
error[E0277]: the trait bound `Thing: Collect` is not satisfied
 --> tests/ui/submit-unrecognized.rs:3:1
  |
3 | inventory::submit!(Thing);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Collect` is not implemented for `Thing`
  |
  = note: required for `Thing` to implement `ErasedNode`
  = note: required for the cast from `&Thing` to `&'static (dyn ErasedNode + 'static)`
  = note: this error originates in the macro `$crate::__do_submit` which comes from the expansion of the macro `inventory::submit` (in Nightly builds, run with -Z macro-backtrace for more info)
