tests/ui/submit-unrecognized.rs
pub struct Thing;

inventory::submit!(Thing);

fn main() {}
